# EnigMap

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
applications/benchmark_ewb/: Makefile
applications/benchmark_ewb/App/TrustedLibrary/: Libcxx.cpp
applications/benchmark_ewb/Enclave/: Enclave.config.xml  Enclave.edl
applications/benchmark_ewb/Enclave/TrustedLibrary/: Libcxx.cpp  Libcxx.edl
applications/benchmark_sgx/: Makefile
applications/benchmark_sgx/App/: App.cpp
applications/benchmark_sgx/App/TrustedLibrary/: Libcxx.cpp
applications/benchmark_sgx/Enclave/: Enclave.config.xml  Enclave.edl
applications/benchmark_sgx/Enclave/TrustedLibrary/: bm.cpp  bm.edl
applications/omp_example/: Makefile
applications/omp_example/App/: App.cpp
applications/omp_example/App/TrustedLibrary/: Libcxx.cpp
applications/omp_example/Enclave/: Enclave.config.xml  Enclave.edl  Enclave.h
applications/omp_example/Enclave/TrustedLibrary/: bm.cpp  bm.edl
applications/signal/: Makefile  algo_par_runner.sh  algo_runner.sh
applications/signal/App/: App.cpp
applications/signal/App/TrustedLibrary/: Libcxx.cpp
applications/signal/Enclave/: Enclave.config.xml  Enclave.edl
applications/signal/Enclave/TrustedLibrary/: signal.cpp  signal.edl  signal.hpp
applications/sorting/: Makefile  README.txt  algo_runner.sh  read_time.py
applications/sorting/App/: App.cpp
applications/sorting/App/TrustedLibrary/: Libcxx.cpp
applications/sorting/Enclave/: Enclave.config.xml
applications/sorting/Enclave/TrustedLibrary/: sort_test.cpp  sorting.edl
cmake/: buildtype.cmake  cppcheck.cmake
ods/: CMakeLists.txt  main.cpp
ods/common/: cpp_extended.hpp  defs.hpp  dmcache.hpp  dummy.hpp  encrypted.hpp  encutils.cpp  encutils.hpp  lrucache.hpp  mov_intrinsics.hpp  osort.hpp  utils.hpp
ods/common/tracing/: tracer.cpp  tracer.hpp  tracer_events.hxx
ods/common/tracing/trackers/: max_tracker.hpp  profiler.hpp  time_tracker.hpp
ods/external_memory/: dynamicvector.hpp  emvector.hpp  extemvector.hpp  noncachedvector.hpp
ods/external_memory/algorithm/: bitonic.hpp  block_for_sort.hpp  ca_bucket_sort.hpp  edge_rec.hpp  kway_butterfly_sort.hpp  kway_distri_sort.hpp  mat_transpose.hpp  min_io_sort.hpp  naive_bucket_sort.hpp  or_compact_shuffle.hpp  param_select.hpp  shift.hpp  sort.hpp  sort_building_blocks.hpp  sort_def.hpp  static_sort.hpp  two_way_cache_oblivious_bucket_sort.hpp
ods/external_memory/server/: cached.hpp  enclaveFileServer.edl  enclaveFileServer_trusted.hpp  enclaveFileServer_untrusted.hpp  fileServer.hpp  memServer.hpp  serverAllocator.hpp  serverFrontend.hpp  serverFrontend_dynamic.hpp
ods/oram/common/: block.hpp  bucket.hpp  concepts.hpp  indexers.hpp  oram_client_interface.hpp  oram_client_interface_assertions.hpp  types.hpp
ods/oram/notoram/: oram.hpp
ods/oram/pathoram/: bucket.hpp  oram.hpp
ods/oram/ringoram/: bucket.hpp  oram.hpp
ods/otree/: node.hpp  oram_interface.hpp  otree.hpp
ods/recoram/: recursive.hpp
tests/: CMakeLists.txt  algorithms.cpp  basic_perf.cpp  improvements_bucketcache.cpp  improvements_filecache.cpp  improvements_none.cpp  improvements_packing.cpp  indexers.cpp  oram.cpp  otree.cpp  otree_init.cpp  perf_ods.cpp  perf_ods_large.cpp  perf_sort.cpp  profiling_test.cpp  recursive.cpp  signal_test.cpp  sort.cpp  test.cpp  util_test.cpp
tools/docker/: buildDockerImage.sh  setup_sgx.sh
tools/docker/cppbuilder/: Dockerfile
tools/docker/cppbuilder-219/: Dockerfile
tools/scripts/: plot_initialization.py  plot_insertion.py  plot_intrinsics.py  plot_intrinsics_v2.py  plot_relative_perfomance.py  plot_relative_perfomance_large.py  plot_search.py  plot_search_pagesize.py  plot_search_signalicelake.py  plot_search_v2.py  plot_search_v3.py  plot_sort.py
tools/scripts/data2/: 4gb_8gb_64gb_l5.txt  bm_sgx_v2.txt  ewb_sgx_v1.txt  ewb_sgx_v1_regularstride.txt  infiniteepc.txt  infiniteepc_l1.txt  infiniteepc_l2.txt  infiniteepc_l3.txt  infiniteepc_l4.txt  pagesizegraph.txt  signal_sgxv2_100EPC.txt
tools/scripts/osort/: plot_bucketsize.py
tools/scripts/signal_data/: data_1.txt  data_10.txt  data_100.txt  data_1000.txt  data_2.txt  data_2000.txt  data_4000.txt  data_8000.txt
